# machina

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: publish.yml  riscv-tests.yml
accel/: Cargo.toml
accel/src/: regalloc.rs
accel/src/exec/: exec_loop.rs  mod.rs  tb_store.rs
accel/src/ir/: context.rs  tb.rs
accel/src/x86_64/: codegen.rs  emitter.rs
core/: Cargo.toml
core/src/: cpu.rs  monitor.rs  wfi.rs
decode/: Cargo.toml
disas/: Cargo.toml
docs/: os2atc-script.md  os2atc-slides.md
docs/superpowers/plans/: 2026-03-30-machina-full-system.md
docs/superpowers/specs/: 2026-03-29-machina-full-system-design.md  2026-04-02-virtio-blk-design.md
guest/riscv/: Cargo.toml
guest/riscv/src/riscv/: mod.rs
guest/riscv/src/riscv/trans/: helpers.rs  mod.rs
guest/riscv/tests/: pmp_tests.rs
hw/char/: Cargo.toml
hw/char/src/: uart.rs
hw/char/tests/: uart_tests.rs
hw/core/: Cargo.toml
hw/core/src/: bus.rs  loader.rs
hw/intc/: Cargo.toml
hw/intc/src/: aclint.rs  plic.rs
hw/intc/tests/: aclint_tests.rs  plic_tests.rs
hw/riscv/: Cargo.toml
hw/riscv/src/: boot.rs  ref_machine.rs
hw/riscv/tests/: ref_machine_tests.rs
hw/virtio/: Cargo.toml
memory/: Cargo.toml
memory/src/: address_space.rs
monitor/: Cargo.toml
monitor/src/: service.rs
scripts/: publish.sh  run-riscv-tests.sh
softfloat/: Cargo.toml
src/: main.rs
system/: Cargo.toml
system/src/: cpus.rs  gdb.rs  lib.rs
tests/: Cargo.toml
tests/firmware/: sifive_pass.S  sifive_pass.elf  sifive_reset.S  sifive_reset.elf
tests/mtest/: Cargo.toml
tests/src/: hw_qdev.rs  hw_sysbus.rs  lib.rs  softmmu.rs  softmmu_exec.rs
tests/src/decode/: mod.rs
tests/src/exec/: mod.rs  multi_vcpu.rs
tests/src/frontend/: mod.rs
tests/src/tools/: mod.rs
tools/difftest/: Cargo.toml
tools/irbackend/: Cargo.toml
tools/irdump/: Cargo.toml
util/: Cargo.toml
