[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]

[workspace]
members = [
    "core",
    "accel",
    "guest/riscv",
    "decode",
    "disas",
    "tests",
    "tools/irdump",
    "tools/irbackend",
    "util",
    "memory",
    "monitor",
    "system",
    "hw/core",
    "hw/intc",
    "hw/char",
    "hw/riscv",
    "hw/virtio",
    "tests/mtest",
    "tools/difftest",
    "softfloat",
]
resolver = "2"

[workspace.dependencies]
# Internal crates (version inherited from workspace.package)
machina-softfloat   = { path = "softfloat" }
machina-core        = { path = "core" }
machina-decode      = { path = "decode" }
machina-disas       = { path = "disas" }
machina-util        = { path = "util" }
machina-difftest    = { path = "tools/difftest" }
machina-memory      = { path = "memory" }
machina-hw-core     = { path = "hw/core" }
machina-monitor     = { path = "monitor" }
machina-accel       = { path = "accel" }
machina-guest-riscv = { path = "guest/riscv" }
machina-hw-char     = { path = "hw/char" }
machina-hw-intc     = { path = "hw/intc" }
machina-hw-virtio   = { path = "hw/virtio" }
machina-system      = { path = "system" }
machina-hw-riscv    = { path = "hw/riscv" }
machina-tests       = { path = "tests" }
machina-mtest       = { path = "tests/mtest" }
machina-irdump      = { path = "tools/irdump" }
machina-irbackend   = { path = "tools/irbackend" }

# External dependencies
libc        = "0.2"
serde_json  = "1"
tempfile    = "3"

[package]
name = "machina-emu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI entry point for the Machina RISC-V full-system emulator"

[[bin]]
name = "machina"
path = "src/main.rs"

[features]
default = ["embed-firmware"]
embed-firmware = ["machina-hw-riscv/embed-firmware"]

[dependencies]
machina-core     = { workspace = true }
machina-accel    = { workspace = true }
machina-memory   = { workspace = true }
machina-hw-riscv = { workspace = true }
machina-system   = { workspace = true }
machina-difftest = { workspace = true }
machina-monitor  = { workspace = true }
machina-hw-core  = { workspace = true }
libc             = { workspace = true }
