[package]
name = "machina-accel"
version.workspace = true
edition.workspace = true
description = "JIT acceleration engine: IR optimization, register allocation, x86-64 code generation, and TB execution"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "jit", "emulator", "codegen", "x86-64"]
categories = ["emulators"]

[dependencies]
machina-core = { workspace = true }
machina-memory = { workspace = true }
libc = { workspace = true }
