[package]
name = "machina-decode"
version.workspace = true
edition.workspace = true
description = "Decoder generator that parses .decode files and produces Rust instruction decoders"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "decoder", "code-generation"]
categories = ["emulators", "development-tools"]
