[package]
name = "machina-memory"
version.workspace = true
edition.workspace = true
description = "Address space management, MMIO dispatch, and RAM block handling"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "memory", "mmio"]
categories = ["emulators"]

[dependencies]
machina-core = { workspace = true }
libc = { workspace = true }
