[package]
name = "machina-monitor"
version = "0.1.0"
edition = "2021"
description = "Debug monitor interface with HMP and MMP protocol support"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]
keywords = ["riscv", "emulator", "monitor", "debug"]
categories = ["emulators", "development-tools::debugging"]

[dependencies]
machina-core = { workspace = true }
serde_json = { workspace = true }
