[package]
name = "machina-monitor"
version.workspace = true
edition.workspace = true
description = "Debug monitor interface with HMP and MMP protocol support"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "monitor", "debug"]
categories = ["emulators", "development-tools::debugging"]

[dependencies]
machina-core = { workspace = true }
serde_json = { workspace = true }
