[package]
name = "machina-util"
version = "0.1.0"
edition = "2021"
description = "Shared utility types and helpers for the Machina RISC-V emulator"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]
keywords = ["riscv", "emulator"]
categories = ["emulators"]
