[package]
name = "machina-util"
version.workspace = true
edition.workspace = true
description = "Shared utility types and helpers for the Machina RISC-V emulator"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator"]
categories = ["emulators"]
