[package]
name = "machina-hw-core"
version = "0.1.0"
edition = "2021"
description = "Device infrastructure providing qdev framework, IRQ routing, chardev, and FDT generation"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]
keywords = ["riscv", "emulator", "device", "qdev"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-memory = { workspace = true }
libc = { workspace = true }
