[package]
name = "machina-difftest"
version = "0.1.0"
edition = "2021"
description = "GDB-based differential testing utilities for emulator validation"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]
keywords = ["riscv", "testing", "emulator"]
categories = ["emulators", "development-tools::testing"]
