[package]
name = "machina-difftest"
version.workspace = true
edition.workspace = true
description = "GDB-based differential testing utilities for emulator validation"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "testing", "emulator"]
categories = ["emulators", "development-tools::testing"]
